# feedBack-desktop

./: WINDOWS_BUILD_REQUIREMENTS.md  package.json
.github/workflows/: build.yml  nightly.yml  release.yml
docs/: audio-distortion-first-start-investigation.md  audio-engine-tlc.md
resources/: entitlements.mac.entitlements
scripts/: build-common.sh  build-macos.sh  bundle-slopsmith.sh  sign-macos-binaries.sh
scripts/dev/: renderer-bus-spike.js
src/audio/: AudioEngine.cpp  AudioEngine.h  BackingLeveler.h  CMakeLists.txt  GainSanitize.h  NAMProcessor.cpp  NodeAddon.cpp  SignalChain.cpp  SignalChain.h  SourceChain.cpp  SourceChain.h
src/audio/Sandbox/: AudioChannel_shared.cpp  SandboxFactory_shared.cpp  SandboxedProcessor.cpp  SandboxedProcessor.h
src/audio/addon/: AddonContext.cpp  AddonContext.h  BackingBindings.cpp  Bindings.h  ChainBindings.cpp  ChainOps.cpp  ChainOps.h  ControlBindings.cpp  DetectionBindings.cpp  DeviceBindings.cpp  EditorWindows.cpp  EditorWindows.h  NapiHelpers.h
src/audio/engine/: BackingPlayer.cpp  BackingPlayer.h  DeviceSetup.cpp  DeviceSetup.h  EngineState.h  ExtraInputs.cpp  ExtraInputs.h  PackedStereoRing.h  RateMatch.h  RendererBus.h  SourcePool.cpp  SourcePool.h  StreamSink.cpp  StreamSink.h
src/main/: audio-bridge.ts  audio-effects-executor.ts  config-bootstrap.ts  config-migrations.ts  config-paths.ts  config-reset.ts  ipc-channels.ts  library-path-config.ts  main.ts  pane-hosts.ts  pane-tray.ts  preload.ts  python.ts  soundfont-manager.ts  window-bounds.ts
src/renderer/: screen.html  screen.js  settings.html
src/renderer/plugin-manager/: plugin.json  screen.html  screen.js
src/vst-host/: main.cpp
tests/: CMakeLists.txt  _load-ts.js  audio-chain-persistence.test.js  audio-effects-executor.test.js  chain-mutation-storm.test.js  config-bootstrap.test.js  config-migrations.test.js  config-paths.test.js  config-reset.test.js  contract-check.test.js  input-source-selection-sync.test.js  juce-exclusive-type-name.test.js  library-path-config.test.js  monitor-mute-suppression.test.js  napi-arg-fuzz.test.js  window-bounds.test.js
tests/contracts/: addon-exports.json  extract.js  ipc-channels.json  preload-audio-api.json
tests/engine_units/: CMakeLists.txt  engine_state_test.cpp  gain_sanitize_test.cpp  packed_stereo_ring_test.cpp  rate_match_test.cpp  renderer_bus_test.cpp
tests/sandbox/e2e/: CMakeLists.txt  signalchain_fault_test.cpp
